--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@truffle/contract": "^4.2.23",
     "@truffle/hdwallet-provider": "^1.1.0",
     "singularitynet-token-contracts": "^3.0.0",
-    "truffle": "5.1.46"
+    "solidity-coverage": "^0.7.19",
+    "truffle": "5.1.46",
+    "truffle-plugin-verify": "^0.5.21"
   },
   "devDependencies": {
     "chai": "^4.2.0",
