--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   "homepage": "https://github.com/singnet/converter-token-manager.git#readme",
   "dependencies": {
     "@openzeppelin/contracts": "^3.2.0",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "@truffle/contract": "^4.2.23",
     "@truffle/hdwallet-provider": "^1.1.0",
     "singularitynet-token-contracts": "^3.0.0",
     "solidity-coverage": "^0.7.19",
     "truffle": "5.1.46",
-    "truffle-plugin-verify": "^0.5.21"
+    "truffle-plugin-verify": "^0.5.21",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
